# imperium-server

./: .dockerignore  .gitignore  CMakeLists.txt  README.md  ToDo.txt  game.py  game_manager.py  imperium-server-admin.py  imperium-server.py  imperium-server.sublime-workspace  packet.py  player.py  player_handler.py  player_manager.py  registration_manager.py  test-client.py  test-udp.py  udp_server.py
python/: game.py  imperium-server-admin.py  imperium-server-tes.py  imperium-server-test.py  imperium-server.py  packet.py  player.py  player_manager.py  registration_manager.py  simulator.py  test-client.py  test-udp.py  udp_server.py  unit.py  version.py
python-client/: imperium-server-test.py  packet.py  simulator.py
python-server/: auth_manager.py  client.py  client_factory.py  definitions.py  game.py  game_id_sequence.py  imperium_server.py  resources.py  statistics.py  tcp_packet.py  udp_handler.py  udp_packet.py
python/old/: imperium_stats_server.py  player_handler.py  stats_handler.py
python/test-data/: create-game.txt  udp2.txt
scripts/: imperium-server  imperium-server.sh  run-server.sh
scripts/init/: imperium-server  imperium-server.sh
scripts/upstart/: imperium-server.conf
server/: Definitions.h  Globals.h  Globals.m  ParameterDefinitions.h  ParameterHandler.m  Player.h  Player.m  Prefix-iOS.pch  ScoreCounter.m  Utils.h  Utils.m  main.m
server/AI/: AI.h  AI.m
server/Engine/: Engine.h  Engine.m  LineOfSight.h  LineOfSight.m  LineOfSightData.h  LineOfSightData.m  PathFinder.m  PathNode.h
server/Extensions/: CGPointExtension.h  CGPointExtension.m
server/Game/: ActionsMenu.h  ActionsMenu.m  ArmyStatus.h  ArmyStatus.m  Clock.h  Clock.m  EndGamePrompt.h  EndGamePrompt.m  GameInfo.h  GameInfo.m  GameLayer.m  GameMenu.h  GameMenu.m  GameOptions.h  HelpActivator.h  HelpOverlay.h  HelpOverlay.m  Messages.h  Messages.m  Panel.m  PauseButton.h  StartPromptOnline.h  UnitChangeMode.m  UnitMissionCanceller.h  UnitNavigation.h
server/Map/: AttackResult.h  AttackResult.m  BaseTerrain.h  FiringRangeVisualizer.h  FiringRangeVisualizer.m  HitPosition.h  HitPosition.m  House.h  House.m  LineOfSightVisualizer.h  Map.h  Map.m  MapLayer.h  MapLayer.m  Message.h  Message.m  Objective.h  Objective.m  PolygonNode.h  PolygonNode.m  SelectionMarkerFragmentShader.h  SelectionNode.m  Smoke.h  Smoke.m  Triangularizer.h  Triangularizer.m  VertexList.h
server/Missions/: AdvanceMission.m  AreaFireMission.m  AssaultMission.h  AssaultMission.m  ChangeModeMission.m  CombatMission.h  CombatMission.m  DisorganizedMission.h  DisorganizedMission.m  FireMission.h  FireMission.m  IdleMission.m  MeleeMission.m  Mission.h  Mission.m  MissionVisualizer.h  MissionVisualizer.m  MoveFastMission.h  MoveFastMission.m  MoveMission.h  MoveMission.m  RallyMission.h  RallyMission.m  RetreatMission.h  RetreatMission.m  RotateMission.h  RotateMission.m  RoutMission.h  RoutMission.m  ScoutMission.m  SmokeMission.m
server/Network/: HostedGame.m  NetworkUtils.h  TcpNetworkHandler.h  TcpNetworkHandler.m  UdpNetworkHandler.h  UdpNetworkHandler.m
src/: AuthManager.cpp  AuthManager.hpp  Definitions.hpp  Errors.hpp  Game.cpp  Game.hpp  GameManager.cpp  GameManager.hpp  GlobalStatistics.hpp  Log.cpp  Log.hpp  Main.cpp  ManagementClient.cpp  ManagementClient.hpp  ManagementServer.cpp  ManagementServer.hpp  Packet.cpp  Packet.hpp  Player.cpp  Player.hpp  PlayerHandler.cpp  PlayerHandler.hpp  PlayerManager.cpp  PlayerManager.hpp  PlayerState.hpp  ResourceLoader.cpp  ResourceLoader.hpp  Server.cpp  Server.hpp  Session.cpp  Session.hpp  Statistics.hpp  UdpHandler.cpp  UdpHandler.hpp  Version.hpp
swift/: Package.resolved  Package.swift  README.md
test-data/: README.txt  host-join-game.txt  host-leave-game.txt  udp1.txt
(+750 files in other folders)
